# nemo-qml-plugin-contextkit

./: .gitignore  CMakeLists.txt  README  nemo-qml-plugin-contextkit.pro
examples/: ShowContextKitProperty.qml  allkeys.qml
packaging/nemomobile/: nemo-qml-plugin-contextkit.spec
rpm/: nemo-qml-plugin-contextkit-qt5.spec  nemo-qml-plugin-contextkit.spec
src/: CMakeLists.txt  ck_property.cpp  ck_property.hpp  plugin-qt5.cpp  plugin-qt5.hpp  plugin.cpp  qmldir  src.pro
src/plugin/: plugin.cpp  plugin.pro  plugins.qmltypes  qmldir
src/providers/: Battery.qml  Profile.qml  providers.pro  providers_qml.pro
src/providers/battery/: battery.pro  batterycontextpropertyprovider.cpp  batterycontextpropertyprovider.h  plugin.cpp  plugins.qmltypes  provider_power_udev.cpp  provider_power_udev.h  qmldir
src/providers/ofono/: CellularBase.qml
